--- a/app/src/main/res/layout/timer_setup_view.xml
+++ b/app/src/main/res/layout/timer_setup_view.xml
@@ -5,11 +5,11 @@
     SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
 -->
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipChildren="false"
     android:gravity="center_horizontal"
     android:orientation="vertical"
     android:paddingBottom="100dp">
