Make it possible to adjust alpha for all color options
(cherry picked from commit 83694add212405c700ea050d7a00e9af34630e28)

--- a/app/src/main/res/xml/screensaver_settings.xml
+++ b/app/src/main/res/xml/screensaver_settings.xml
@@ -45,7 +45,7 @@
             android:key="key_screensaver_clock_color_picker"
             android:title="@string/clock_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -55,7 +55,7 @@
             android:key="key_screensaver_date_color_picker"
             android:title="@string/screensaver_date_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -65,7 +65,7 @@
             android:key="key_screensaver_next_alarm_color_picker"
             android:title="@string/screensaver_next_alarm_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
