--- a/app/src/main/res/xml/settings_customize_digital_widget.xml
+++ b/app/src/main/res/xml/settings_customize_digital_widget.xml
@@ -67,7 +67,7 @@
             android:key="key_digital_widget_custom_clock_color"
             android:title="@string/digital_widget_clock_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -93,7 +93,7 @@
             android:key="key_digital_widget_custom_date_color"
             android:title="@string/digital_widget_date_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -119,7 +119,7 @@
             android:key="key_digital_widget_custom_next_alarm_color"
             android:title="@string/widget_next_alarm_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -137,7 +137,7 @@
             android:key="key_digital_widget_custom_city_clock_color"
             android:title="@string/digital_widget_city_clock_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -155,7 +155,7 @@
             android:key="key_digital_widget_custom_city_name_color"
             android:title="@string/digital_widget_city_name_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
