--- a/app/src/main/res/xml/settings_customize_material_you_digital_widget.xml
+++ b/app/src/main/res/xml/settings_customize_material_you_digital_widget.xml
@@ -50,7 +50,7 @@
             android:key="key_material_you_digital_widget_custom_clock_color"
             android:title="@string/digital_widget_clock_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -76,7 +76,7 @@
             android:key="key_material_you_digital_widget_custom_date_color"
             android:title="@string/digital_widget_date_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -102,7 +102,7 @@
             android:key="key_material_you_digital_widget_custom_next_alarm_color"
             android:title="@string/widget_next_alarm_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -120,7 +120,7 @@
             android:key="key_material_you_digital_widget_custom_city_clock_color"
             android:title="@string/digital_widget_city_clock_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -138,7 +138,7 @@
             android:key="key_material_you_digital_widget_custom_city_name_color"
             android:title="@string/digital_widget_city_name_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
