--- a/app/src/main/res/xml/settings_customize_material_you_vertical_digital_widget.xml
+++ b/app/src/main/res/xml/settings_customize_material_you_vertical_digital_widget.xml
@@ -26,7 +26,7 @@
             android:key="key_material_you_vertical_digital_widget_custom_hours_color"
             android:title="@string/digital_widget_custom_hours_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -44,7 +44,7 @@
             android:key="key_material_you_vertical_digital_widget_custom_minutes_color"
             android:title="@string/digital_widget_custom_minutes_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -70,7 +70,7 @@
             android:key="key_material_you_vertical_digital_widget_custom_date_color"
             android:title="@string/digital_widget_date_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -96,7 +96,7 @@
             android:key="key_material_you_vertical_digital_widget_custom_next_alarm_color"
             android:title="@string/widget_next_alarm_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
