--- a/app/src/main/res/xml/settings_customize_next_alarm_widget.xml
+++ b/app/src/main/res/xml/settings_customize_next_alarm_widget.xml
@@ -43,7 +43,7 @@
             android:key="key_next_alarm_widget_custom_title_color"
             android:title="@string/next_alarm_widget_custom_title_color"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -61,7 +61,7 @@
             android:key="key_next_alarm_widget_custom_alarm_title_color"
             android:title="@string/next_alarm_widget_custom_alarm_title_color"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -79,7 +79,7 @@
             android:key="key_next_alarm_widget_custom_alarm_color"
             android:title="@string/widget_next_alarm_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
