--- a/app/src/main/res/xml/settings_customize_vertical_digital_widget.xml
+++ b/app/src/main/res/xml/settings_customize_vertical_digital_widget.xml
@@ -43,7 +43,7 @@
             android:key="key_vertical_digital_widget_custom_hours_color"
             android:title="@string/digital_widget_custom_hours_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -61,7 +61,7 @@
             android:key="key_vertical_digital_widget_custom_minutes_color"
             android:title="@string/digital_widget_custom_minutes_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -87,7 +87,7 @@
             android:key="key_vertical_digital_widget_custom_date_color"
             android:title="@string/digital_widget_date_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -113,7 +113,7 @@
             android:key="key_vertical_digital_widget_custom_next_alarm_color"
             android:title="@string/widget_next_alarm_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
