--- a/app/src/main/res/xml/settings_customize_material_you_next_alarm_widget.xml
+++ b/app/src/main/res/xml/settings_customize_material_you_next_alarm_widget.xml
@@ -26,7 +26,7 @@
             android:key="key_material_you_next_alarm_widget_custom_title_color"
             android:title="@string/next_alarm_widget_custom_title_color"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -44,7 +44,7 @@
             android:key="key_material_you_next_alarm_widget_custom_alarm_title_color"
             android:title="@string/next_alarm_widget_custom_alarm_title_color"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
@@ -62,7 +62,7 @@
             android:key="key_material_you_next_alarm_widget_custom_alarm_color"
             android:title="@string/widget_next_alarm_custom_color_title"
             android:defaultValue="#FFFFFF"
-            app:colorpicker_showAlpha="false"
+            app:colorpicker_showAlpha="true"
             app:colorpicker_selectNoneButtonText="@string/label_default"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false"
