--- a/app/src/main/res/layout/standard_digital_widget_with_background.xml
+++ b/app/src/main/res/layout/standard_digital_widget_with_background.xml
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2016 The Android Open Source Project
     modified
     SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
 -->
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/digitalWidget"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:background="@android:color/darker_gray">
 
     <ImageView
         android:id="@+id/digitalWidgetBackground"
@@ -21,10 +20,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
         android:layout_centerInParent="true"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <TextClock
             android:id="@+id/clock"
@@ -33,13 +32,9 @@
             android:ellipsize="none"
             android:includeFontPadding="false"
             android:maxLines="1"
-            android:shadowRadius="2.75"
-            android:shadowColor="@android:color/black"
-            android:shadowDx="2"
-            android:shadowDy="2"
             tools:text="0123 AM"
-            tools:textSize="70sp"
-            tools:textColor="@android:color/white" />
+            tools:textColor="@android:color/white"
+            tools:textSize="70sp" />
 
         <LinearLayout
             android:id="@+id/digitalWidgetBottomView"
@@ -51,19 +46,15 @@
                 android:id="@+id/date"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingHorizontal="3dp"
-                android:gravity="center"
                 android:ellipsize="none"
+                android:gravity="center"
                 android:includeFontPadding="false"
                 android:maxLines="1"
+                android:paddingHorizontal="3dp"
                 android:textAllCaps="true"
-                android:shadowRadius="2.75"
-                android:shadowColor="@android:color/black"
-                android:shadowDx="2"
-                android:shadowDy="2"
                 tools:text="01. Jan, 2023"
-                tools:textSize="18sp"
-                tools:textColor="@android:color/white" />
+                tools:textColor="@android:color/white"
+                tools:textSize="18sp" />
 
             <ImageView
                 android:id="@+id/nextAlarmIcon"
@@ -71,26 +62,22 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@null"
                 android:scaleType="fitCenter"
-                tools:src="@drawable/ic_tab_alarm_static"
-                tools:paddingHorizontal="8dp" />
+                tools:paddingHorizontal="8dp"
+                tools:src="@drawable/ic_tab_alarm_static" />
 
             <TextView
                 android:id="@+id/nextAlarm"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingHorizontal="3dp"
-                android:gravity="center"
                 android:ellipsize="none"
+                android:gravity="center"
                 android:includeFontPadding="false"
                 android:maxLines="1"
+                android:paddingHorizontal="3dp"
                 android:textAllCaps="true"
-                android:shadowRadius="2.75"
-                android:shadowColor="@android:color/black"
-                android:shadowDx="2"
-                android:shadowDy="2"
                 tools:text="08:30"
-                tools:textSize="18sp"
-                tools:textColor="@android:color/white" />
+                tools:textColor="@android:color/white"
+                tools:textSize="18sp" />
 
         </LinearLayout>
 
