--- a/app/src/main/res/layout/standard_next_alarm_widget.xml
+++ b/app/src/main/res/layout/standard_next_alarm_widget.xml
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     SPDX-License-Identifier: GPL-3.0-only
 -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nextAlarmWidget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:background="@android:color/darker_gray">
 
     <!-- A horizontal padding is added because on some devices
     the text shadow is cut off. -->
@@ -18,19 +17,15 @@
         android:id="@+id/nextAlarmText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="3dp"
-        android:gravity="center"
         android:ellipsize="none"
+        android:gravity="center"
         android:includeFontPadding="false"
         android:maxLines="1"
+        android:paddingHorizontal="3dp"
         android:textAllCaps="true"
-        android:shadowRadius="2.75"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="2"
-        android:shadowDy="2"
         tools:text="@string/next_alarm_widget_text"
-        tools:textSize="18sp"
-        tools:textColor="@android:color/white" />
+        tools:textColor="@android:color/white"
+        tools:textSize="18sp" />
 
     <!-- A horizontal padding is added because on some devices
     the text shadow is cut off. -->
@@ -38,19 +33,15 @@
         android:id="@+id/nextAlarmTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="3dp"
-        android:gravity="center"
         android:ellipsize="none"
+        android:gravity="center"
         android:includeFontPadding="false"
         android:maxLines="1"
+        android:paddingHorizontal="3dp"
         android:textAllCaps="true"
-        android:shadowRadius="2.75"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="2"
-        android:shadowDy="2"
+        android:textColor="@android:color/white"
         tools:text="Test"
-        tools:textSize="18sp"
-        android:textColor="@android:color/white" />
+        tools:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -63,8 +54,8 @@
             android:layout_height="match_parent"
             android:contentDescription="@null"
             android:scaleType="fitCenter"
-            tools:src="@drawable/ic_tab_alarm_static"
-            tools:paddingEnd="3dp" />
+            tools:paddingEnd="3dp"
+            tools:src="@drawable/ic_tab_alarm_static" />
 
         <TextView
             android:id="@+id/nextAlarm"
@@ -76,10 +67,6 @@
             android:maxLines="1"
             android:paddingStart="@null"
             android:paddingEnd="3dp"
-            android:shadowColor="@android:color/black"
-            android:shadowDx="2"
-            android:shadowDy="2"
-            android:shadowRadius="2.75"
             android:textAllCaps="true"
             android:textColor="@android:color/white"
             tools:text="08:30"
