--- a/app/src/main/res/layout/standard_next_alarm_widget_sizer.xml
+++ b/app/src/main/res/layout/standard_next_alarm_widget_sizer.xml
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     SPDX-License-Identifier: GPL-3.0-only
 -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:paddingVertical="5dp"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingVertical="5dp"
+    tools:background="@android:color/darker_gray">
 
     <!-- A horizontal padding is added because on some devices
     the text shadow is cut off. -->
@@ -18,19 +17,15 @@
         android:id="@+id/nextAlarmText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="3dp"
-        android:gravity="center"
         android:ellipsize="none"
+        android:gravity="center"
         android:includeFontPadding="false"
         android:maxLines="1"
+        android:paddingHorizontal="3dp"
         android:textAllCaps="true"
-        android:shadowRadius="2.75"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="2"
-        android:shadowDy="2"
         tools:text="@string/next_alarm_widget_text"
-        tools:textSize="18sp"
-        tools:textColor="@android:color/white" />
+        tools:textColor="@android:color/white"
+        tools:textSize="18sp" />
 
 
     <!-- A horizontal padding is added because on some devices
@@ -39,19 +34,15 @@
         android:id="@+id/nextAlarmTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingHorizontal="3dp"
-        android:gravity="center"
         android:ellipsize="none"
+        android:gravity="center"
         android:includeFontPadding="false"
         android:maxLines="1"
+        android:paddingHorizontal="3dp"
         android:textAllCaps="true"
-        android:shadowRadius="2.75"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="2"
-        android:shadowDy="2"
+        android:textColor="@android:color/white"
         tools:text="Test"
-        tools:textSize="18sp"
-        android:textColor="@android:color/white" />
+        tools:textSize="18sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -66,33 +57,25 @@
             android:ellipsize="none"
             android:maxLines="1"
             android:text="@string/clock_emoji"
-            android:shadowRadius="2.75"
-            android:shadowColor="@android:color/black"
-            android:shadowDx="2"
-            android:shadowDy="2"
-            tools:text=""
             tools:drawableStart="@drawable/ic_tab_alarm_static"
             tools:paddingHorizontal="3dp"
+            tools:text=""
             tools:textColor="@android:color/white" />
 
         <TextView
             android:id="@+id/nextAlarm"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:paddingStart="@null"
-            android:paddingEnd="3dp"
-            android:gravity="center"
             android:ellipsize="none"
+            android:gravity="center"
             android:includeFontPadding="false"
             android:maxLines="1"
+            android:paddingStart="@null"
+            android:paddingEnd="3dp"
             android:textAllCaps="true"
-            android:shadowRadius="2.75"
-            android:shadowColor="@android:color/black"
-            android:shadowDx="2"
-            android:shadowDy="2"
             tools:text="Mon, 07:30 AM"
-            tools:textSize="18sp"
-            tools:textColor="@android:color/white" />
+            tools:textColor="@android:color/white"
+            tools:textSize="18sp" />
 
     </LinearLayout>
 
