--- a/app/src/main/res/layout/standard_vertical_digital_widget_sizer.xml
+++ b/app/src/main/res/layout/standard_vertical_digital_widget_sizer.xml
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     SPDX-License-Identifier: GPL-3.0-only
 -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:background="@android:color/darker_gray">
 
     <!-- A horizontal padding is added because on some devices
     the text shadow is cut off. -->
@@ -19,52 +18,40 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:paddingHorizontal="3dp"
-        android:includeFontPadding="false"
         android:ellipsize="none"
+        android:includeFontPadding="false"
         android:maxLines="1"
+        android:paddingHorizontal="3dp"
         android:textAllCaps="true"
-        android:shadowRadius="2.75"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="2"
-        android:shadowDy="2"
         tools:text="Sat. 20 Jan."
-        tools:textSize="18sp"
-        tools:textColor="@android:color/white" />
+        tools:textColor="@android:color/white"
+        tools:textSize="18sp" />
 
     <TextClock
         android:id="@+id/clockHours"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:includeFontPadding="false"
         android:ellipsize="none"
         android:format12Hour="hh"
         android:format24Hour="kk"
+        android:includeFontPadding="false"
         android:maxLines="1"
-        android:shadowRadius="2.75"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="2"
-        android:shadowDy="2"
         tools:text="01"
-        tools:textSize="70sp"
-        tools:textColor="@android:color/white" />
+        tools:textColor="@android:color/white"
+        tools:textSize="70sp" />
 
     <TextClock
         android:id="@+id/clockMinutes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:includeFontPadding="false"
         android:ellipsize="none"
         android:format12Hour="mm"
         android:format24Hour="mm"
+        android:includeFontPadding="false"
         android:maxLines="1"
-        android:shadowRadius="2.75"
-        android:shadowColor="@android:color/black"
-        android:shadowDx="2"
-        android:shadowDy="2"
         tools:text="00"
-        tools:textSize="70sp"
-        tools:textColor="@android:color/white" />
+        tools:textColor="@android:color/white"
+        tools:textSize="70sp" />
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -76,18 +63,14 @@
             android:id="@+id/nextAlarmIcon"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:ellipsize="none"
+            android:gravity="center"
             android:includeFontPadding="false"
             android:maxLines="1"
             android:text="@string/clock_emoji"
-            android:shadowRadius="2.75"
-            android:shadowColor="@android:color/black"
-            android:shadowDx="2"
-            android:shadowDy="2"
-            tools:text=""
             tools:drawableStart="@drawable/ic_tab_alarm_static"
             tools:paddingHorizontal="3dp"
+            tools:text=""
             tools:textColor="@android:color/white" />
 
         <!-- A padding is added at the end because on some devices
@@ -96,17 +79,13 @@
             android:id="@+id/nextAlarm"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:ellipsize="none"
+            android:gravity="center"
+            android:includeFontPadding="false"
+            android:maxLines="1"
             android:paddingStart="@null"
             android:paddingEnd="3dp"
-            android:includeFontPadding="false"
-            android:gravity="center"
-            android:ellipsize="none"
-            android:maxLines="1"
             android:textAllCaps="true"
-            android:shadowRadius="2.75"
-            android:shadowColor="@android:color/black"
-            android:shadowDx="2"
-            android:shadowDy="2"
             android:textColor="@android:color/white"
             tools:text="Mon, 07:30 AM"
             tools:textSize="18sp" />
