--- a/app/src/main/res/layout/standard_vertical_digital_widget_with_background.xml
+++ b/app/src/main/res/layout/standard_vertical_digital_widget_with_background.xml
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     SPDX-License-Identifier: GPL-3.0-only
 -->
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/verticalDigitalWidget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:background="@android:color/darker_gray">
 
     <ImageView
         android:id="@+id/digitalWidgetBackground"
@@ -30,52 +29,40 @@
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingHorizontal="3dp"
             android:ellipsize="none"
             android:includeFontPadding="false"
             android:maxLines="1"
+            android:paddingHorizontal="3dp"
             android:textAllCaps="true"
-            android:shadowRadius="2.75"
-            android:shadowColor="@android:color/black"
-            android:shadowDx="2"
-            android:shadowDy="2"
             tools:text="Sat. 20 Jan."
-            tools:textSize="18sp"
-            tools:textColor="@android:color/white" />
+            tools:textColor="@android:color/white"
+            tools:textSize="18sp" />
 
         <TextClock
             android:id="@+id/clockHours"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:includeFontPadding="false"
             android:ellipsize="none"
             android:format12Hour="hh"
             android:format24Hour="kk"
+            android:includeFontPadding="false"
             android:maxLines="1"
-            android:shadowRadius="2.75"
-            android:shadowColor="@android:color/black"
-            android:shadowDx="2"
-            android:shadowDy="2"
             tools:text="01"
-            tools:textSize="70sp"
-            tools:textColor="@android:color/white" />
+            tools:textColor="@android:color/white"
+            tools:textSize="70sp" />
 
         <TextClock
             android:id="@+id/clockMinutes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:includeFontPadding="false"
             android:ellipsize="none"
             android:format12Hour="mm"
             android:format24Hour="mm"
+            android:includeFontPadding="false"
             android:maxLines="1"
-            android:shadowRadius="2.75"
-            android:shadowColor="@android:color/black"
-            android:shadowDx="2"
-            android:shadowDy="2"
             tools:text="20"
-            tools:textSize="70sp"
-            tools:textColor="@android:color/white" />
+            tools:textColor="@android:color/white"
+            tools:textSize="70sp" />
 
         <LinearLayout
             android:id="@+id/digitalWidgetBottomView"
@@ -91,8 +78,8 @@
                 android:layout_height="match_parent"
                 android:contentDescription="@null"
                 android:scaleType="fitCenter"
-                tools:src="@drawable/ic_tab_alarm_static"
-                tools:paddingHorizontal="3dp" />
+                tools:paddingHorizontal="3dp"
+                tools:src="@drawable/ic_tab_alarm_static" />
 
             <!-- A padding is added at the end because on some devices
             the text shadow is cut off. -->
@@ -100,20 +87,16 @@
                 android:id="@+id/nextAlarm"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:paddingStart="@null"
-                android:paddingEnd="3dp"
+                android:ellipsize="none"
                 android:gravity="center"
                 android:includeFontPadding="false"
-                android:ellipsize="none"
                 android:maxLines="1"
+                android:paddingStart="@null"
+                android:paddingEnd="3dp"
                 android:textAllCaps="true"
-                android:shadowRadius="2.75"
-                android:shadowColor="@android:color/black"
-                android:shadowDx="2"
-                android:shadowDy="2"
                 tools:text="Sat. 10:45 AM"
-                tools:textSize="18sp"
-                tools:textColor="@android:color/white" />
+                tools:textColor="@android:color/white"
+                tools:textSize="18sp" />
 
         </LinearLayout>
 
