--- a/app/src/main/res/layout/timer_setup_view.xml
+++ b/app/src/main/res/layout/timer_setup_view.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2016 The Android Open Source Project
     modified
     SPDX-License-Identifier: Apache-2.0 AND GPL-3.0-only
@@ -21,23 +20,24 @@
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="@fraction/timer_setup_time_bottom_percent" />
 
-    <include layout="@layout/timer_setup_time"
+    <include
+        layout="@layout/timer_setup_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/timer_setup_time_bottom"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/timer_setup_time_bottom" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <include
         layout="@layout/timer_setup_digits"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:layout_constraintHeight_max="420dp"
-        app:layout_constraintWidth_max="315dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_max="420dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/timer_setup_time_bottom"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintWidth_max="315dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
